Consumo API books
se listan los libros desde la api de laravel

--- a/src/app/pages/busqueda/busqueda.page.html
+++ b/src/app/pages/busqueda/busqueda.page.html
@@ -10,5 +10,11 @@
 <ion-content>
   <ion-searchbar placeholder="Buscar" 
                 showCancelButton="always" 
-                cancel-button-text="Cancelar"></ion-searchbar>
+                cancel-button-text="Cancelar">
+  </ion-searchbar>
+
+  <ion-item *ngFor= "let item of bookData">
+    {{item.title}}
+  </ion-item>
+              
 </ion-content>
