--- a/src/app/pages/historial/historial.page.html
+++ b/src/app/pages/historial/historial.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
+  <!--<ion-list>
     <ion-item *ngFor="let item of [1,1,1,1,1,1,1,1,1]">
       <ion-label>
         <h3>
@@ -22,5 +22,8 @@
         <ion-skeleton-text width="40px"></ion-skeleton-text>
       </ion-label>
     </ion-item>
-  </ion-list>
+  </ion-list>-->
+
+  
+
 </ion-content>
