--- a/src/app/pages/busqueda/busqueda.page.html
+++ b/src/app/pages/busqueda/busqueda.page.html
@@ -13,8 +13,10 @@
                 cancel-button-text="Cancelar">
   </ion-searchbar>
 
-  <ion-item *ngFor= "let item of bookData">
-    {{item.title}}
-  </ion-item>
+  <ion-list *ngFor= "let item of bookData">
+    <ion-item routerLink='/book/{{item.id}}'> 
+      <ion-label>{{item.title}}</ion-label>
+    </ion-item>
+  </ion-list>
               
 </ion-content>
