--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -4,7 +4,7 @@
 
 <ion-content color="fondo">
   <ion-card>
-    <ion-img src ="/assets/home1.jpg"></ion-img>
+    <ion-img src ="/assets/home1.png"></ion-img>
   </ion-card>
   
   <ion-grid fixed>
