--- a/src/app/pages/book/book.page.html
+++ b/src/app/pages/book/book.page.html
@@ -16,35 +16,42 @@
     <ion-button class="top-20" shape="round" center="middle" fill="outline" color="success" routerLink='/tomar'>Tomar</ion-button>
     <ion-button class="top-20" shape="round" fill="solid" color="warning" routerLink='/reserva'>Reservar</ion-button>
   </div>
-  <div style="text-align: center">
-    <h1>
-      <b>
-        {{title}}
-      </b>
-    </h1>
-  </div>
-  <div style="text-align: center">
-    <h6>
-      {{authors}}
-    </h6>
-  </div>  
-  <div style="text-align: center">
-    <p>
-      {{publisher}}
-    </p>
-  </div> 
-  <div style="text-align: center">
-    <p>
-      {{publishedDate}}
-    </p></div>
-  <div style="text-align: justify">
-    <p>
-      {{description}}
-    </p>
-  </div>
+  <ion-card>
+    <ion-card-content>
+      <ion-grid>
+        <div style="text-align: center">
+          <h1>
+            <b>
+              {{title}}
+            </b>
+          </h1>
+        </div>
+        <div style="text-align: center">
+          <h6>
+            {{authors}}
+          </h6>
+        </div>  
+        <div style="text-align: center">
+          <p>
+            {{publisher}}
+          </p>
+        </div> 
+        <div style="text-align: center">
+          <p>
+            {{publishedDate}}
+          </p></div>
+        <div style="text-align: justify">
+          <p>
+            {{description}}
+          </p>
+        </div>
+        
+        <p *ngIf="averageRating">
+          <ion-icon name="star"> </ion-icon>
+          {{averageRating}}
+        </p>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card> 
   
-  <p *ngIf="averageRating">
-    <ion-icon name="star"> </ion-icon>
-    {{averageRating}}
-  </p>
 </ion-content>
