--- a/src/app/pages/book/book.page.html
+++ b/src/app/pages/book/book.page.html
@@ -36,10 +36,12 @@
             {{publisher}}
           </p>
         </div> 
+        <hr width="80%">
         <div style="text-align: center">
           <p>
             {{publishedDate}}
           </p></div>
+          <hr width="80%">
         <div style="text-align: justify">
           <p>
             {{description}}
