--- a/src/app/pages/book/book.page.html
+++ b/src/app/pages/book/book.page.html
@@ -13,8 +13,8 @@
     </ion-card>
   </div>
   <div style=" display: flex; align-items: center; justify-content: center;">
-    <ion-button class="top-20" shape="round" center="middle" fill="outline" color="success" routerLink='/tomar'>Tomar</ion-button>
-    <ion-button class="top-20" shape="round" fill="solid" color="warning" routerLink='/reserva'>Reservar</ion-button>
+    <ion-button class="top-20" shape="round" center="middle" fill="outline"  routerLink='/tomar'>Tomar</ion-button>
+    <ion-button class="top-20" shape="round" fill="solid"  routerLink='/reserva'>Reservar</ion-button>
   </div>
   <ion-card>
     <ion-card-content>
