--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -10,7 +10,8 @@
 
           <ion-row>
             <ion-col>
-              <img src="/assets/avatars/av-1.png">
+              <ion-img src="/assets/avatars/av-9.png"> </ion-img>
+              
             </ion-col>
           </ion-row>
 
@@ -20,11 +21,11 @@
               <ion-list>
 
                 <ion-item>
-                  <ion-input placeholder="Id" name="id" type="text" required></ion-input>
+                  <ion-input placeholder="Usuario" name="id" type="text" class="ion-text-center" required></ion-input>
                 </ion-item>
 
                 <ion-item>
-                  <ion-input placeholder="Contraseña" name="password" type="password" required></ion-input>
+                  <ion-input placeholder="Contraseña" name="password" type="password" class="ion-text-center" required></ion-input>
                 </ion-item>
 
               </ion-list>
