--- a/src/app/pages/prestamos/prestamos.page.html
+++ b/src/app/pages/prestamos/prestamos.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button text="Atrás" defaultHref="/"> </ion-back-button>
     </ion-buttons>
-    <ion-title>Prestamos</ion-title>
+    <ion-title>Préstamos</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,7 +12,7 @@
               >
     <ion-slide>
       
-      <ion-label>Aun no tiene libros en prestamo</ion-label>
+      <ion-label>Aún no tiene libros en préstamo</ion-label>
 
     </ion-slide>
   </ion-slides>
