Backend & Frontend Take book full

--- a/Frontend/src/app/pages/prestamos/prestamos.page.html
+++ b/Frontend/src/app/pages/prestamos/prestamos.page.html
@@ -8,12 +8,14 @@
 </ion-header>
 
 <ion-content color="fondo">
-  <ion-slides [options]="sliderOpts"
+ <!-- <ion-slides [options]="sliderOpts"
               >
     <ion-slide>
       
       <ion-label>Aún no tiene libros en préstamo</ion-label>
 
     </ion-slide>
-  </ion-slides>
+  </ion-slides> -->
+
+  
 </ion-content>
