--- a/Frontend/src/app/pages/prestamos/prestamos.page.html
+++ b/Frontend/src/app/pages/prestamos/prestamos.page.html
@@ -8,14 +8,44 @@
 </ion-header>
 
 <ion-content color="fondo">
- <!-- <ion-slides [options]="sliderOpts"
+ <!-- <ion-slides [options]="sliderOpts " *ngIf="book?.length < -1 "
               >
     <ion-slide>
       
       <ion-label>Aún no tiene libros en préstamo</ion-label>
 
     </ion-slide>
-  </ion-slides> -->
+  </ion-slides>
 
-  
+  <!-- routerLink='/book/{{book.id}} -->
+  <ion-card *ngFor="let book of prestamos" >
+    <ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col size="4">
+            <ion-img *ngIf="book.imagenLibro"
+              [src]="book.imagenLibro">
+            </ion-img>
+          </ion-col>
+          <ion-col size="8">
+            <h1>
+              {{book.tituloLibro}}
+            </h1>
+            <h2>
+              Fecha préstamo
+            </h2>
+            <p>
+              {{book.FechaPrestamo}}
+            </p>
+            <h2>
+              Fecha Entrega
+            </h2>
+            <p>
+              {{book.FechaEntrega}}
+            </p>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
