--- a/Frontend/src/app/pages/inicio/inicio.page.html
+++ b/Frontend/src/app/pages/inicio/inicio.page.html
@@ -1,23 +1,36 @@
-<ion-header  >
-
-</ion-header>
+<ion-header> </ion-header>
 
 <ion-content color="fondo">
+  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="end" >
+      <ion-fab-button (click)="logout()">
+        <ion-icon name="log-out-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+    <ion-fab-list side="start" >
+      <ion-fab-button routerLink="/perfil">
+        <ion-icon name="settings-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+
   <ion-card>
-    <ion-img src ="/assets/home1.png"></ion-img>
+    <ion-img src="/assets/home1.png"></ion-img>
   </ion-card>
-  
+
   <ion-grid fixed>
     <ion-row>
-      <ion-col size="6" *ngFor= "let c of componentes">
-        <ion-card [routerLink]="c.redirectTo"> 
-          <ion-card-content> 
-            <ion-img [src] ="c.image"  class="ion-text-center"></ion-img>
-          </ion-card-content>    
+      <ion-col size="6" *ngFor="let c of componentes">
+        <ion-card [routerLink]="c.redirectTo">
+          <ion-card-content>
+            <ion-img [src]="c.image" class="ion-text-center"></ion-img>
+          </ion-card-content>
           <ion-card-subtitle class="ion-text-center">
             {{c.name}}
           </ion-card-subtitle>
-          
         </ion-card>
       </ion-col>
     </ion-row>
