Update Readme & Create Page Profile

--- a/Frontend/src/app/pages/tomar/tomar.page.html
+++ b/Frontend/src/app/pages/tomar/tomar.page.html
@@ -1,21 +1,17 @@
-<ion-header>
-  <ion-toolbar>
+<ion-header >
+  <ion-toolbar color="fondo">
     <ion-buttons slot="start">
       <ion-back-button text="Atrás" defaultHref="/"> </ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding color="fondo" class="ion-padding">
+<ion-content padding color="fondo"color="fondo" class="ion-padding">
   <ion-card>
     <ion-card-content>
       <ion-grid>
         <div style="text-align: center">
           <h1>
-            <b>
-              Pepito Perez
-            </b>
-
             <h1>
               Tomaras el libro
             </h1>
