--- a/Frontend/src/app/pages/perfil/perfil.page.html
+++ b/Frontend/src/app/pages/perfil/perfil.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar >
+  <ion-toolbar color="fondo">
     <ion-buttons slot="start">
       <ion-back-button text="Atrás" defaultHref="/"> </ion-back-button>
     </ion-buttons>
@@ -7,62 +7,31 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
-
+<ion-content color="fondo">
   <ion-row class="top-20">
-    
     <ion-col size="12" class="ion-text-center">
-      <img src="assets/avatars/av-8.png" class="img-avatar">
+      <img src="assets/avatars/{{usuario.avatar}}" class="img-avatar" />
     </ion-col>
-
   </ion-row>
 
   <form>
-    <ion-row>
-      <ion-col>
-
-        <ion-list>
-
-          <ion-item>
-            <ion-input placeholder="Nombres" name="nombre" type="text"  required></ion-input>
-          </ion-item>
-
-          <ion-item>                
-            <ion-input placeholder="Apellidos" name="apellido" type="text"  required></ion-input>
-          </ion-item>
-
-          <ion-item>
-            <ion-input placeholder="Facultad" name="facultad" type="text"  required></ion-input>
-          </ion-item>
-
-          <ion-item>
-            <ion-input placeholder="Email" name="email" type="email"  required></ion-input>
-          </ion-item>
-
-          <ion-item>
-            <ion-input placeholder="Id" name="idEstudiante" facultad type="text"  required></ion-input>
-          </ion-item>
-
-          <ion-item>
-            <ion-input placeholder="Contraseña" name="password" type="password"  required></ion-input>
-          </ion-item>
-
-        </ion-list>
-      </ion-col>
-    </ion-row>
-      
-      <ion-row>
-        <ion-col class="ion-text-center">
-          <ion-button type="submit"
-                      color="tertiary"
-                      shape="round">
-          Actualizar
-        </ion-button>
-      </ion-col>
-    </ion-row>
-    
+    <ion-grid>
+      <div style="text-align: center;">
+        <b>
+          {{usuario.nombre}}
+        </b>
+      </div>
+      <div style="text-align: center;">
+        <b>
+          {{usuario.apellido}}
+        </b>
+      </div>
+      <div style="text-align: center;">
+        <p>
+          {{usuario.facultad}}
+        </p>
+      </div>
+      <hr width="80%" />
+    </ion-grid>
   </form>
-
 </ion-content>
-
-
