update profile - banner & avatars

--- a/Frontend/src/app/pages/inicio/inicio.page.html
+++ b/Frontend/src/app/pages/inicio/inicio.page.html
@@ -18,7 +18,7 @@
   </ion-fab>
 
   <ion-card>
-    <ion-img src="/assets/home1.png"></ion-img>
+    <ion-img src="https://i.ibb.co/YRY95vN/home1.png"></ion-img>
   </ion-card>
 
   <ion-grid fixed>
