nuevo commit no se que poner

--- a/Frontend/src/app/pages/book/book.page.html
+++ b/Frontend/src/app/pages/book/book.page.html
@@ -14,7 +14,7 @@
   </div>
   <div style=" display: flex; align-items: center; justify-content: center;">
     <ion-button class="top-20" shape="round" center="middle" fill="outline"  routerLink='/tomar/{{id}}'>Tomar</ion-button>
-    <ion-button class="top-20" shape="round" fill="solid"  routerLink='/reserva'>Reservar</ion-button>
+    <ion-button class="top-20" shape="round" fill="solid"  routerLink='/reserva/{{id}}'>Reservar</ion-button>
   </div>
   <ion-card>
     <ion-card-content>
