--- a/Frontend/src/app/pages/busqueda/busqueda.page.html
+++ b/Frontend/src/app/pages/busqueda/busqueda.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="fondo">
     <ion-buttons slot="start">
-      <ion-back-button text="Atrás" defaultHref="/"> </ion-back-button>
+      <ion-back-button text="Atrás" defaultHref="/inicio"> </ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
