--- a/Frontend/src/app/pages/entrega/entrega.page.html
+++ b/Frontend/src/app/pages/entrega/entrega.page.html
@@ -1,10 +1,11 @@
-<ion-header >
+<ion-header>
   <ion-toolbar color="fondo">
     <ion-buttons slot="start">
-      <ion-back-button text="Atrás" defaultHref="/"> </ion-back-button>
+      <ion-back-button text="Atrás" defaultHref="/accion"> </ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
 <ion-content padding color="fondo"color="fondo" class="ion-padding">
   <ion-card>
     <ion-card-content>
@@ -12,26 +13,21 @@
         <div style="text-align: center">
           <h1>
             <h1>
-              Tomaras el libro
+              Entregaras el libro
             </h1>
             <hr width="80%">
             <h2>
               {{title}}
             </h2>
+            <hr width="80%">
             <div style="display: flex; align-items: center; justify-content: center;">
               <ion-img [src]="image" style="width: 120px; height: 120px;">
               </ion-img>
             </div>
+
           </h1>
           <hr width="80%">
-          <hr width="80%">
-          <ion-label>Fecha Préstamo</ion-label>
-          <br>
-          <b>
-            <ion-label color="dark">{{FPrestamo}}</ion-label>
-          </b>
-          <hr width="80%">
-          <ion-label>Fecha Devolución</ion-label>
+          <ion-label>Fecha Entrega</ion-label>
           <br>
           <b>
             <ion-label color="dark">{{FEntrega}}</ion-label>
@@ -43,6 +39,6 @@
 
 
   <div style=" display: flex; align-items: center; justify-content: center;">
-    <ion-button class="top-20" shape="round" fill="solid" (click)="tomar()">Tomar</ion-button>
+    <ion-button class="top-20" shape="round" fill="solid" (click)="tomar()">Entregar</ion-button>
   </div>
 </ion-content>
