--- a/Frontend/src/app/pages/inicio/inicio.page.html
+++ b/Frontend/src/app/pages/inicio/inicio.page.html
@@ -12,19 +12,23 @@
     </ion-fab-list>
     <ion-fab-list side="start" >
       <ion-fab-button routerLink="/perfil">
-        <ion-icon name="settings-outline"></ion-icon>
+        <ion-icon name="person-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
 
-  <ion-card>
-    <ion-img src="https://i.ibb.co/YRY95vN/home1.png"></ion-img>
-  </ion-card>
+  <div>
+    <ion-card class="card">
+       <img src="https://i.ibb.co/YRY95vN/home1.png" >  
+      <!-- <ion-img src="https://i.ibb.co/YRY95vN/home1.png"  ></ion-img> -->
+     </ion-card>
+  </div>
+  
 
   <ion-grid fixed>
     <ion-row>
-      <ion-col size="6" *ngFor="let c of componentes">
-        <ion-card [routerLink]="c.redirectTo">
+      <ion-col size="6" *ngFor="let c of componentes" >
+        <ion-card [routerLink]="c.redirectTo" class="top-20">
           <ion-card-content>
             <ion-img [src]="c.image" class="ion-text-center"></ion-img>
           </ion-card-content>
