--- a/Frontend/src/app/pages/prestamos/prestamos.page.html
+++ b/Frontend/src/app/pages/prestamos/prestamos.page.html
@@ -1,30 +1,36 @@
 <ion-header>
   <ion-toolbar color="fondo">
     <ion-buttons slot="start">
-      <ion-back-button text="Atrás" defaultHref="/"> </ion-back-button>
+      <ion-back-button text="Atrás" defaultHref="/inicio"> </ion-back-button>
     </ion-buttons>
     <ion-title>Préstamos</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content color="fondo">
- <!-- <ion-slides [options]="sliderOpts " *ngIf="book?.length < -1 "
+  <!-- <ion-slides [options]="sliderOpts " *ngIf="book?.length < -1 "
               >
     <ion-slide>
       
       <ion-label>Aún no tiene libros en préstamo</ion-label>
 
     </ion-slide>
-  </ion-slides>
+  </ion-slides> 
+  
+  *ngIf="book.entregado"
 
   <!-- routerLink='/book/{{book.id}} -->
-  <ion-card *ngFor="let book of prestamos" >
+
+  <ion-card
+    *ngFor="let book of prestamos"
+    routerLink="/accion/{{book.idLibro}}"
+    
+  >
     <ion-card-content>
       <ion-grid>
         <ion-row>
           <ion-col size="4">
-            <ion-img *ngIf="book.imagenLibro"
-              [src]="book.imagenLibro">
+            <ion-img *ngIf="book.imagenLibro" [src]="book.imagenLibro">
             </ion-img>
           </ion-col>
           <ion-col size="8">
